fix overflow

--- a/src/components/Pizza/Ingredients.module.css
+++ b/src/components/Pizza/Ingredients.module.css
@@ -5,7 +5,7 @@
   left: 0; right: 0;
 }
 .block {
-  width: 1000px;
+  width: 800px;
   height: 50px;
   transform-origin: center;
   transform: rotate(0deg);
@@ -35,7 +35,7 @@
   transform: rotate(180deg);
 }
 .square {
-  background: yellow;
+  background-color: yellow;
   border: 1px solid black;
   width: 50px;
   height: 50px;
